# piet

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: qa.yml
images/: README.md
src/piet/: __init__.py  carbon.py  mondrian.py
