[project]
name = "piet"
version = "0.1.0"
description = "A tool to store images in DNA"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
dependencies = [
    "largestinteriorrectangle>=0.2.0",
    "numpy>=1.24.4",
    "opencv-python>=4.8.0.74",
    "reedsolo>=1.7.0",
    "scipy>=1.10.1",
    "scikit-image>=0.21.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
