[project]
name = "piet"
version = "0.1.1"
description = "Store image to DNA as Piet Mondrian's style."
authors = [
    { name = "Ziya Tang", email = "tang@stu.njau.edu.cn" }
]
dependencies = [
    "largestinteriorrectangle>=0.2.0",
    "numpy>=1.24.4",
    "opencv-python>=4.8.0.74",
    "reedsolo>=1.7.0",
    "scipy>=1.10.1",
    "scikit-image>=0.21.0",
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
